--- a/Mafia/Base.lproj/Main.storyboard
+++ b/Mafia/Base.lproj/Main.storyboard
@@ -979,33 +979,30 @@
                                                                     </constraints>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Имя" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9By-Y6-Y8k">
-                                                                    <rect key="frame" x="75" y="24" width="156" height="21"/>
+                                                                    <rect key="frame" x="75" y="24" width="34" height="21"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qk5-Fa-iXC">
-                                                                    <rect key="frame" x="239" y="19" width="88" height="30"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="width" constant="88" id="2x6-7G-Ih4"/>
-                                                                    </constraints>
-                                                                    <state key="normal" title="Выбрать"/>
-                                                                </button>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Выбрать" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lcn-kv-HCd">
+                                                                    <rect key="frame" x="258" y="23" width="69" height="21"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
                                                             </subviews>
                                                             <constraints>
                                                                 <constraint firstItem="Ewr-8b-YaR" firstAttribute="top" secondItem="n5P-qo-uNY" secondAttribute="topMargin" id="0fL-C2-pfm"/>
                                                                 <constraint firstItem="Ewr-8b-YaR" firstAttribute="centerY" secondItem="9By-Y6-Y8k" secondAttribute="centerY" id="61Q-T8-pHm"/>
                                                                 <constraint firstItem="Ewr-8b-YaR" firstAttribute="bottom" secondItem="n5P-qo-uNY" secondAttribute="bottomMargin" id="HYl-M5-Kza"/>
-                                                                <constraint firstItem="9By-Y6-Y8k" firstAttribute="centerY" secondItem="qk5-Fa-iXC" secondAttribute="centerY" id="JZ5-OH-ubF"/>
                                                                 <constraint firstItem="9By-Y6-Y8k" firstAttribute="leading" secondItem="Ewr-8b-YaR" secondAttribute="trailing" constant="15" id="PEP-oe-XME"/>
-                                                                <constraint firstItem="qk5-Fa-iXC" firstAttribute="trailing" secondItem="n5P-qo-uNY" secondAttribute="trailingMargin" id="g6s-Se-d7N"/>
+                                                                <constraint firstItem="lcn-kv-HCd" firstAttribute="trailing" secondItem="n5P-qo-uNY" secondAttribute="trailingMargin" id="eUl-AG-qT4"/>
+                                                                <constraint firstItem="lcn-kv-HCd" firstAttribute="centerY" secondItem="Ewr-8b-YaR" secondAttribute="centerY" id="knO-Hi-sQg"/>
                                                                 <constraint firstItem="Ewr-8b-YaR" firstAttribute="leading" secondItem="n5P-qo-uNY" secondAttribute="leadingMargin" id="p4x-dO-gIR"/>
-                                                                <constraint firstItem="qk5-Fa-iXC" firstAttribute="leading" secondItem="9By-Y6-Y8k" secondAttribute="trailing" constant="8" symbolic="YES" id="pEu-N2-y4D"/>
                                                             </constraints>
                                                         </tableViewCellContentView>
                                                         <connections>
                                                             <outlet property="actionRoleImage" destination="Ewr-8b-YaR" id="YdJ-Ge-wQd"/>
-                                                            <outlet property="chooseButton" destination="qk5-Fa-iXC" id="uAd-zI-Ur4"/>
                                                             <outlet property="nameLabel" destination="9By-Y6-Y8k" id="9mf-4N-INu"/>
                                                             <segue destination="0zp-G1-1gg" kind="show" id="HD8-Xh-so0"/>
                                                         </connections>
